--- a/views/faq.pug
+++ b/views/faq.pug
@@ -2,44 +2,49 @@ doctype html
 html(lang="ru")
   head
     meta(charset="UTF-8")
-    link(type="text/css" rel="stylesheet" href="/stylesheets/faq.css")
+    link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
     script(src='js/jquery-3.5.1.min.js')
     title= "Привет!"
 
   body
-    div.main-block
-      div
+    div.block-faq
+      div.background
         #user
           if user
-            div.menu
-              a.index(href="/") На главную
-              a.index(href="/signout") Выйти
+            div
+              a.general-button(href="/") На главную
+              a.general-button(href="/home") Домой
+              a.general-button(href="/signout") Выйти
           else
-            div.menu
-              a.index(href="/") На главную
-              a.js-open-modal(href=0, data-modal="1") Войти
-              a.js-open-modal(href=0, data-modal="2") Зарегистрироваться
+            div
+              a.general-button(href="/") На главную
+              a.js-open-modal.little-button(href=0, data-modal="1") Войти
+              a.js-open-modal.little-button(href=0, data-modal="2") Зарегистрироваться
 
-      include modals.pug
+        include modals.pug
 
-      div.faq
+        div
+          div.abzac
+            h1 FAQ
 
-        h3 FAQ
+          div.abzac
+            h2 "Что это за сайт?"
+            p NCityLab - это сайт ролевого сообщества "N-city". В данный момент разрабатывается и готовится к запуску.
 
-        h3 "Что это за сайт?"
-        p NCityLab - это сайт ролевого сообщества "N-city". В данный момент разрабатывается и готовится к запуску.
+          div.abzac
+            h2 Немного об игре
+            p Игра в жанре драма с элементами триллера "N-city" была создана на уже почившем сайте beon.ru. Таких, как мы, было много и мы не выделялись чем-то особенным в плане игровой механики, построения сюжета или критериев отбора. Наша особенность в другом, мы - одна команда, каждый член которой - важная часть коллектива и сюжета.
+            p Состав игроков время от времени менялся, но основной костяк был неизменным. Не смотря на то, что все мы уже взрослые люди, у которых есть работа, дом и семья, мы с удовольствием примеряем на себя роль персонажа, в которого вложили частичку себя, и заходим в игру, чтобы встретиться с теми, кто дорог сердцу.
 
-        h3 Немного об игре
-        p Игра в жанре драма с элементами триллера "N-city" была создана на уже почившем сайте beon.ru. Таких, как мы, было много и мы не выделялись чем-то особенным в плане игровой механики, построения сюжета или критериев отбора. Наша особенность в другом, мы - одна команда, каждый член которой - важная часть коллектива и сюжета.
-        p Состав игроков время от времени менялся, но основной костяк был неизменным. Не смотря на то, что все мы уже взрослые люди, у которых есть работа, дом и семья, мы с удовольствием примеряем на себя роль персонажа, в которого вложили частичку себя, и заходим в игру, чтобы встретиться с теми, кто дорог сердцу.
+          div.abzac
+            h2 "Когда примерно сайт будет готов?"
+            p Ответ на этот вопрос знает только Великий Китайский Рандом, однако спешу заверить, что первые изменения не за горами. Когда? Ответ в первом предложении :)
 
-        h3 "Когда примерно сайт будет готов?"
-        p Ответ на этот вопрос знает только Великий Китайский Рандом, однако спешу заверить, что первые изменения не за горами. Когда? Ответ в первом предложении :)
-
-        h3 "Хочу к вам, что нужно сделать?"
-        p Во-первых, зарегистрироваться на сайте #[a(href="http://beon.fun") beon.fun], чтобы иметь возможность присоединиться к игре.
-        p Во-вторых, зайти в сообщество с нашей игрой #[a(href="http://ncity.beon.fun/") N-city] и подать анкету в личные сообщения #[a(href="http://lilchara.beon.fun/") мне].
-        p В-третьих, немного подождать, а после пообщаться со мной :)
-        p Вуаля, вы великолепны!
+          div.abzac
+            h2 "Хочу к вам, что нужно сделать?"
+            p Во-первых, зарегистрироваться на сайте #[a(href="http://beon.fun") beon.fun], чтобы иметь возможность присоединиться к игре.
+            p Во-вторых, зайти в сообщество с нашей игрой #[a(href="http://ncity.beon.fun/") N-city] и подать анкету в личные сообщения #[a(href="http://lilchara.beon.fun/") мне].
+            p В-третьих, немного подождать, а после пообщаться со мной :)
+            p Вуаля, вы великолепны!
 
     script(src='/javascripts/modal.js')
