--- a/views/register.pug
+++ b/views/register.pug
@@ -2,20 +2,19 @@ doctype html
 html(lang="ru")
 	head
 		meta(charset="UTF-8")
-		link(type="text/css" rel="stylesheet" href="/stylesheets/sign.css")
+		link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
 		title= "Регистрация"
 
 	body
-		div.main-block
-			h1 Регистрация
-				div
-					form(class='form-signin', action='/signup', method='POST')
-						input(type='text', name='username', placeholder='Логин', required, autofocus)
-						input(type='password', name='password', placeholder='Пароль', required)
-						input(type='email', name='email', placeholder='E-mail', required)
-						button(class='btn btn-lg btn-primary btn-block', type='submit') Зарегистрироваться
-						span.clearfix
-					#message
-						if message
-							h1 #{message}
-				a.to-main(href="/") Вернуться на главную
+		div.background
+			h1.digital-text Регистрация
+				form(class='form-signin', action='/signup', method='POST')
+					input(type='text', name='username', placeholder='Логин', required, autofocus)
+					input(type='password', name='password', placeholder='Пароль', required)
+					input(type='email', name='email', placeholder='E-mail', required)
+					input(class='js-open-modal button', type='submit' value='Зарегистрироваться')
+					span.clearfix
+				#message
+					if message
+						p.digital-text #{message}
+				a.general-button.big-button(href="/") На главную
