--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,8 @@ html(lang="ru")
     #user
       if user
         div.center.background
+          a.general-button(href="/faq") FAQ
+          a.general-button(href="/home") Домой
           h1 Добро пожаловать, #{user.username}!
           a.general-button(href="/signout") Выйти
       else
