Добавлен новый пункт меню

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,6 +13,7 @@ html(lang="ru")
           div.menu
             a.general-button(href="/faq") FAQ
             a.general-button(href="/home") Домой
+            a.general-button(href="/test") Тест!
           h1 Добро пожаловать, #{user.username}!
           a.general-button(href="/signout") Выйти
       else
