--- a/views/test.pug
+++ b/views/test.pug
@@ -8,4 +8,8 @@ html(lang="ru")
 
   body
     div.center.background
+      div.menu
+      a.general-button(href="/") На главную
+      a.general-button(href="/faq") FAQ
+      a.general-button(href="/home") Домой
       p Здесь находится тестовая запись, в которой чуть позже можно будет написать комментарии!
