--- a/views/faq.pug
+++ b/views/faq.pug
@@ -14,7 +14,7 @@ html(lang="ru")
             div
               a.general-button(href="/") На главную
               a.general-button(href="/home") Домой
-              a.general-button(href="/test") Test!
+              a.general-button(href="/test") Тест!
               a.general-button(href="/signout") Выйти
           else
             div
