--- a/views/home.pug
+++ b/views/home.pug
@@ -10,6 +10,7 @@ html(lang="ru")
 			div.menu
 				a.general-button(href="/") На главную
 				a.general-button(href="/faq") FAQ
+				a.general-button(href="/test") Тест!
 				a.general-button(href='/signout') Выйти
 			div.home-text
 				#user
