Пробуем сделать форму

--- a/views/test.pug
+++ b/views/test.pug
@@ -12,4 +12,10 @@ html(lang="ru")
         a.general-button(href="/") На главную
         a.general-button(href="/faq") FAQ
         a.general-button(href="/home") Домой
+        a.general-button(href='/signout') Выйти
       p Здесь находится тестовая запись, в которой чуть позже можно будет написать комментарии!
+
+      form
+        (action='/postsmth', method='POST')
+          input(type='text', name='comment', placeholder='Здесь какой-то текст!', required, autofocus)
+          input(class='button', type='submit', value='Отправить')
