--- a/views/test.pug
+++ b/views/test.pug
@@ -16,6 +16,6 @@ html(lang="ru")
       p Здесь находится тестовая запись, в которой чуть позже можно будет написать комментарии!
 
       form
-        (action='/postsmth', method='POST')
+        (action='postsmth', method='POST')
           input(type='text', name='comment', placeholder='Здесь какой-то текст!', required, autofocus)
           input(class='button', type='submit', value='Отправить')
