--- a/views/test.pug
+++ b/views/test.pug
@@ -16,5 +16,5 @@ html(lang="ru")
       p Здесь находится тестовая запись, в которой чуть позже можно будет написать комментарии!
 
       form(action='postsmth', method='POST')
-        input(type='text', name='comment', placeholder='Здесь какой-то текст!', required, autofocus)
+        textarea(type='text', name='comment', placeholder='Здесь какой-то текст!', required, autofocus)
         input(class='button', type='submit', value='Отправить')
