--- a/views/register.pug
+++ b/views/register.pug
@@ -3,6 +3,7 @@ html(lang="ru")
 	head
 		meta(charset="UTF-8")
 		link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
+		script(src='https://www.google.com/recaptcha/api.js')
 		title= "Регистрация"
 
 	body
@@ -12,6 +13,7 @@ html(lang="ru")
 					input(type='text', name='username', placeholder='Логин', required, autofocus)
 					input(type='password', name='password', placeholder='Пароль', required)
 					input(type='email', name='email', placeholder='E-mail', required)
+					div(class="g-recaptcha center" data-sitekey="6LcfN_IZAAAAAMxb8lfkiAZnT3BfdnYrmPEvI70H")
 					input(class='js-open-modal button', type='submit' value='Зарегистрироваться')
 					span.clearfix
 				#message
