--- a/views/faq.pug
+++ b/views/faq.pug
@@ -15,6 +15,8 @@ html(lang="ru")
               a.general-button(href="/") На главную
               a.general-button(href="/home") Домой
               a.general-button(href="/test") Тест!
+              if user.role === "admin"
+                a.general-button(href="/admin") Админская панель
               a.general-button(href="/signout") Выйти
           else
             div
@@ -24,24 +26,23 @@ html(lang="ru")
 
         include modals.pug
 
-        div
-          div.abzac
+        div.abzac
             h1 FAQ
 
-          div.abzac
+        div.abzac
             h2 "Что это за сайт?"
             p NCityLab - это сайт ролевого сообщества "N-city". В данный момент разрабатывается и готовится к запуску.
 
-          div.abzac
+        div.abzac
             h2 Немного об игре
             p Игра в жанре драма с элементами триллера "N-city" была создана на уже почившем сайте beon.ru. Таких, как мы, было много и мы не выделялись чем-то особенным в плане игровой механики, построения сюжета или критериев отбора. Наша особенность в другом, мы - одна команда, каждый член которой - важная часть коллектива и сюжета.
             p Состав игроков время от времени менялся, но основной костяк был неизменным. Не смотря на то, что все мы уже взрослые люди, у которых есть работа, дом и семья, мы с удовольствием примеряем на себя роль персонажа, в которого вложили частичку себя, и заходим в игру, чтобы встретиться с теми, кто дорог сердцу.
 
-          div.abzac
+        div.abzac
             h2 "Когда примерно сайт будет готов?"
             p Ответ на этот вопрос знает только Великий Китайский Рандом, однако спешу заверить, что первые изменения не за горами. Когда? Ответ в первом предложении :)
 
-          div.abzac
+        div.abzac
             h2 "Хочу к вам, что нужно сделать?"
             p Во-первых, зарегистрироваться на сайте #[a(href="http://beon.fun") beon.fun], чтобы иметь возможность присоединиться к игре.
             p Во-вторых, зайти в сообщество с нашей игрой #[a(href="http://ncity.beon.fun/") N-city] и подать анкету в личные сообщения #[a(href="http://lilchara.beon.fun/") мне].
