--- a/views/home.pug
+++ b/views/home.pug
@@ -11,6 +11,8 @@ html(lang="ru")
 				a.general-button(href="/") На главную
 				a.general-button(href="/faq") FAQ
 				a.general-button(href="/test") Тест!
+				if user.role === "admin"
+					a.general-button(href="/admin") Админская панель
 				a.general-button(href='/signout') Выйти
 			div.home-text
 				#user
