--- a/views/index.pug
+++ b/views/index.pug
@@ -14,6 +14,8 @@ html(lang="ru")
             a.general-button(href="/faq") FAQ
             a.general-button(href="/home") Домой
             a.general-button(href="/test") Тест!
+            if user.role === "admin"
+              a.general-button(href="/admin") Админская панель
           h1 Добро пожаловать, #{user.username}!
           a.general-button(href="/signout") Выйти
       else
