--- a/views/happynewyear.pug
+++ b/views/happynewyear.pug
@@ -3,16 +3,15 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
-    script(src='js/jquery-3.5.1.min.js')
-    script(src='js/tweenMax-1.20.3.min.js')
     title= "Поздравляю!!!"
 
-  body
-    div.center.background
-      h1 Привет!
-      p Очень здорово, что ты здесь, потому что на этой странице я хотела бы кое-что сказать :3
-      p Большое спасибо, что ты рядом со мной, и неважно, что нас разделяют километры, для меня это не имеет значение, ведь быть рядом - означает иметь возможность написать в любую минуту и получить отклик.
-      p Я поздравляю тебя с наступающими (или уже наступившими) праздниками и в желаю в Новом году много-много здоровья, исполнения планов именно таким образом, каким задумывалось, замечательную команду поддержки и, главное, всего самого наилучшего, чего только можно пожелать самому себе)
-      h3 С новым, 2021, годом!!!
-
-  script(src='/javascripts/snowfall.js')
+  body.cookiesbackground
+    div.snowfall
+      div.center.happybackground
+        h1 Привет!
+        p Очень здорово, что ты здесь, потому что на этой странице я хотела бы кое-что сказать :3
+        p Большое спасибо, что ты рядом со мной, и неважно, что нас разделяют километры, для меня это не имеет значение, ведь быть рядом - означает иметь возможность написать в любую минуту и получить отклик.
+        p Я поздравляю тебя с наступающими (или уже наступившими) праздниками и в желаю в новом году много-много здоровья, исполнения планов именно таким образом, каким задумывалось, замечательную команду поддержки и, главное, всего самого наилучшего, чего только можно пожелать самому себе)
+        h3 С новым 2021 годом!!!
+        p P.S.: немного музыки для настроения :)
+        iframe(width="560" height="315" src="https://www.youtube.com/embed/nPhOGiyvwxs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
