--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,6 +124,9 @@ input {
   flex-direction: column;
   font-size: 20px;
   width: 70%;
+  text-align: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /*Для уменьшения размера кнопки*/
