--- a/views/faq.pug
+++ b/views/faq.pug
@@ -3,7 +3,7 @@ html(lang="ru")
   head
     meta(charset="UTF-8")
     link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
-    script(src='js/jquery-3.5.1.min.js')
+    script(href='/javascripts/jquery-3.5.1.min.js')
     title= "Привет!"
 
   body
