--- a/views/test.pug
+++ b/views/test.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="ru")
   head
     meta(charset="UTF-8")
-    script(src='js/jquery-3.5.1.min.js')
+    script(href='/javascripts/jquery-3.5.1.min.js')
     link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
     title= "Тест"
 
